--- a/app/scripts/components/header/index.html
+++ b/app/scripts/components/header/index.html
@@ -21,13 +21,13 @@
           </a>
         </li>
 
-        <li class="header__button" ng-show="sallittu(user, 'view-oma-hakemus')" ui-sref-active="is-active">
+        <li class="header__button {{ 'app.hakija.hakemukset' | includedByState | toClass:'is-active' }}" ng-show="sallittu(user, 'view-oma-hakemus')">
           <a class="header__link" ui-sref="app.hakija.hakemukset.list()">
             Omat hakemukset
           </a>
         </li>
 
-        <li class="header__button {{ 'hakemukset' | stateNameIncludes:['app.hakija.hakemukset.list'] | toClass:'is-active' }}"
+        <li class="header__button {{ 'hakemukset' | stateNameIncludes:['app.hakija.hakemukset.hakemus', 'app.hakija.hakemukset.list'] | toClass:'is-active' }}"
             ng-show="sallittu(user, 'view-kaikki-hakemukset')">
           <a class="header__link" ui-sref="app.yhteinen.hakemukset.list({tyyppi: 'AH0'})">
             Kaikki hakemukset
