LIVIJUKU-362 hakemukset näkymästä takaisin linkki pois, hakemusnäkymän linkkien teksti joko 'Palaa hakemusten päänäkymään' tai 'Palaa omiin hakemuksiin' käyttäjän roolista riippuen

--- a/app/scripts/views/hakemus/index.html
+++ b/app/scripts/views/hakemus/index.html
@@ -2,8 +2,15 @@
 
   <!-- Navigaatio -->
   <juku-navigation>
-    <juku-link-prev ng-click="backToList()">
+
+    <!-- Käsittelijä -->
+    <juku-link-prev ng-hide="isHakija" ng-click="backToList()">
       Palaa hakemusten päänäkymään
+    </juku-link-prev>
+
+    <!-- Hakija -->
+    <juku-link-prev ng-show="isHakija" ng-click="backToList()">
+      Palaa omiin hakemuksiin
     </juku-link-prev>
 
     <juku-tabs>
@@ -296,8 +303,14 @@
       </juku-controls>
 
       <juku-navigation-links>
-        <juku-link-prev ng-click="backToList()">
+        <!-- Käsittelijä -->
+        <juku-link-prev ng-hide="isHakija" ng-click="backToList()">
           Palaa hakemusten päänäkymään
+        </juku-link-prev>
+
+        <!-- Hakija -->
+        <juku-link-prev ng-show="isHakija" ng-click="backToList()">
+          Palaa omiin hakemuksiin
         </juku-link-prev>
 
         <!-- Käsittelijä -->
