--- a/app/scripts/components/seurantalomakePaikallisliikenne/index.styl
+++ b/app/scripts/components/seurantalomakePaikallisliikenne/index.styl
@@ -1,3 +1,17 @@
 .seurantalomakepaikallisliikenne
   .table
     border: 1px solid #ddd
+    th:first-child
+      width: 60%
+    th
+      width: 5%
+      font-weight: bold
+    td
+      vertical-align: middle
+    tfoot
+      font-weight: bold
+  .yhteensa
+    margin-left: 105px
+  span.glyphicon-remove-sign
+    font-size: 2em
+    color:colors.red
