--- a/app/scripts/components/seurantalomakePaikallisliikenne/index.styl
+++ b/app/scripts/components/seurantalomakePaikallisliikenne/index.styl
@@ -2,16 +2,19 @@
   .table
     border: 1px solid #ddd
     th:first-child
-      width: 60%
+      width: 19%
+    th:last-child
+      width: 4%
     th
-      width: 5%
+      width: 11%
       font-weight: bold
     td
       vertical-align: middle
     tfoot
       font-weight: bold
-  .yhteensa
-    margin-left: 105px
+   .yhteensa
+      float: right
+      margin-top:7px
   span.glyphicon-remove-sign
     font-size: 2em
     color:colors.red
