LIVIJUKU-362 Hakemusnäkymän yhtenäistäminen, Ely-hakemuslinkki korjattu

--- a/app/scripts/views/kasittelija/hakemukset.html
+++ b/app/scripts/views/kasittelija/hakemukset.html
@@ -63,7 +63,7 @@
                   </thead>
                   <tbody>
                   <tr ng-repeat="hakemus in displayedCollection"
-                      ng-click="hakemukset.siirryHakemukseen(hakemus, hakemuskausi)">
+                      ng-click="hakemukset.siirryHakemukseen(hakemus, hakemuskausi, hakijatyyppi)">
                     <td>{{hakemukset.hakijanNimi(hakemus)}}</td>
                     <td>
                       <hakemus-label tila="{{hakemus.hakemustilatunnus}}"></hakemus-label>
