LIVIJUKU-391 Käyttäjätiedot näytön palvelut

--- a/app/scripts/components/userDropdown/index.html
+++ b/app/scripts/components/userDropdown/index.html
@@ -11,7 +11,7 @@
       </a>
     </div>
     <ul class="dropdown-menu">
-      <li><a ui-sref-active="is-active" ui-sref="app.hakija.asetukset">
+      <li><a ui-sref-active="is-active" ui-sref="app.yhteinen.asetukset">
         Asetukset
       </a></li>
       <li><a ui-sref-active="is-active" ui-sref="app.yhteinen.kayttajatiedot">
