LIVIJUKU-391 Käyttäjätiedot näytön palvelut

--- a/app/scripts/views/yhteinen/asetukset.html
+++ b/app/scripts/views/yhteinen/asetukset.html
@@ -18,7 +18,7 @@
           <div class="col-md-4">
             <h5>Rooli</h5>
 
-            <p>{{rooli}}</p>
+            <p>{{roolit}}</p>
           </div>
         </div>
       </juku-form-row>
